[gd_scene load_steps=8 format=3 uid="uid://bwx5vgdwyp3rl"]

[ext_resource type="Script" path="res://scripts/UI/party_ui.gd" id="1_cqsal"]
[ext_resource type="Texture2D" uid="uid://bnel1clkuwbpb" path="res://assets/ui/party_ui/armoury_body_merge.png" id="2_cnifg"]
[ext_resource type="PackedScene" uid="uid://cje0ll6pwd5yp" path="res://scenes/character_display.tscn" id="2_pdnay"]
[ext_resource type="Texture2D" uid="uid://bxyo6htxdl7o5" path="res://assets/ui/fight_ui/menu_heading_smaller.png" id="3_jkd3s"]
[ext_resource type="FontFile" uid="uid://coqhbo7l7vts0" path="res://assets/fonts/playfair/PlayfairDisplay-Regular.ttf" id="4_invhi"]
[ext_resource type="Texture2D" uid="uid://cygxw5gpduq6s" path="res://assets/chars/male/male_05.png" id="5_qj0u8"]

[sub_resource type="LabelSettings" id="LabelSettings_tyvgq"]
font = ExtResource("4_invhi")
font_size = 37
font_color = Color(0.60933, 0.60933, 0.60933, 1)

[node name="party_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqsal")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -408.0
offset_right = 331.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cnifg")
expand_mode = 5

[node name="UI_title" type="TextureRect" parent="bg"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -334.5
offset_top = -90.0
offset_right = 334.5
offset_bottom = 67.0
grow_horizontal = 2
texture = ExtResource("3_jkd3s")

[node name="Title" type="Label" parent="bg/UI_title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -25.5
offset_right = 164.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "Party Management"
label_settings = SubResource("LabelSettings_tyvgq")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="displays" type="Control" parent="bg"]
anchors_preset = 0
offset_top = -114.0
offset_right = 40.0
offset_bottom = -74.0

[node name="main_character_display" parent="bg/displays" instance=ExtResource("2_pdnay")]
layout_mode = 1
offset_left = 30.0
offset_top = 180.0
offset_right = 580.0
offset_bottom = 380.0
character_class = ""
character_xp = 800
character_portrait = 5

[node name="infos" parent="bg/displays/main_character_display" index="0"]
text = "Halfai
 Lvl : 1
 XP : 800/1000"

[node name="xp_bar" parent="bg/displays/main_character_display/infos" index="0"]
value = 800.0

[node name="avatar_portrait" parent="bg/displays/main_character_display/avatar_background" index="0"]
texture = ExtResource("5_qj0u8")

[node name="delete_button" parent="bg/displays/main_character_display" index="2"]
visible = false
disabled = true

[node name="class_badge" parent="bg/displays/main_character_display" index="3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -50.0
offset_right = -105.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2

[node name="character_display2" parent="bg/displays" instance=ExtResource("2_pdnay")]
layout_mode = 1
offset_left = 30.0
offset_top = 380.0
offset_right = 580.0
offset_bottom = 580.0
character_class = ""
character_xp = 201
character_portrait = 0

[node name="character_display3" parent="bg/displays" instance=ExtResource("2_pdnay")]
layout_mode = 1
offset_left = 30.0
offset_top = 580.0
offset_right = 580.0
offset_bottom = 780.0
character_class = ""
character_level = 0
character_portrait = 0

[node name="character_display4" parent="bg/displays" instance=ExtResource("2_pdnay")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 760.0
offset_right = 580.0
offset_bottom = 960.0
grow_vertical = 0
character_class = ""
character_level = 0
character_portrait = 0

[editable path="bg/displays/main_character_display"]
